oxiplate-derive/tests/broken/extends/extends-non-existent-deep.stderr
error: Path does not exist: `$DIR/templates/extends-non-existent.html.oxip`
 --> templates/extends-missing.html.oxip
  |
  | {% extends "extends-non-existent.html.oxip" %}
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
